# checkers

./: .gitignore  CMakeLists.txt  Checker_Rules.txt  LICENSE.txt  README.md  makefile
c++/: NOTICE.txt
c++/src/: CheckerGame.cpp  Checkerboard.cpp  Checkerboard.hpp  Checkers.hpp  Global.hpp  Main.cpp  Player.cpp  Player.hpp  SoundManager.cpp  Square.cpp  Square.hpp  game_times.sav
checkers/: Program.cs
checkers/Checker/: Class1.cs
checkers/Game/: Game.cs
checkers/ScoreKeeper/: Class1.cs
html5/: checkers.js  index.html
src/: AI.cpp  AI.hpp  CheckerGame.hpp  Checkerpiece.cpp  Checkerpiece.hpp  Checkers.cpp  Main.cpp  Moveable.cpp  Moveable.hpp  SoundManager.hpp
